# remotesend

./: .gitignore
.github/workflows/: compile_apk.yml
app/lib/config/: init.dart
app/lib/model/state/: settings_state.dart  settings_state.mapper.dart
app/lib/provider/: persistence_provider.dart  settings_provider.dart
app/lib/provider/network/: quick_share_provider.dart  scan_facade.dart  send_provider.dart
app/lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/rust/api/: quick_share.dart
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: mod.rs  quick_share.rs
app/test/: mocks.mocks.dart
common/lib/model/: device.dart  device.mapper.dart
rqs_sys_metrics_stub/: Cargo.toml
rqs_sys_metrics_stub/src/: lib.rs
